Changelog
=========

1.0b6 (unreleased)
------------------

* Redirect to the comment form action instead of the absolute url when a 
  comment is posted. This fixes the accidentially triggered file upload when a 
  comment is posted on a file content object.
  [timo]

* We need five:registerPackage to register the i18n folder.
  [vincentfretin]

* Added Traditional Chinese (zh_TW) translation.
  [TsungWei Hu]

* Added French translation.
  [vincentfretin]

* Renamed legend_add_comment to label_add_comment to have the translation from
  plone domain.
  [vincentfretin]

* label_comment_by and label_commented_at are not in Plone 4 translation anymore, so
  these two messages moved to plone.app.discussions i18n domain.
  [vincentfretin]

* Translate "Warning" shown in @@moderate-comments in the plone domain.
  [vincentfretin]

* Fixed i18n markup of message_moderation_disabled.
  [vincentfretin]

* Catch Type errors in indexers if object can not be adapted to IDiscussion
  [do3cc]

* Call the CaptchaValidator even when no captcha data was submitted. This is 
  necessary to ensure that the collective.akismet validator is called when 
  installed. 
  [timo]
  
* Spanish translation added. Thanks to Judith Sanleandro.
  [timo]


1.0b5 (2010-07-16)
------------------

* Use self.form instead of CommentForm for the CommentsViewlet update method so 
  integrators don't have to override the viewlet's update method. 
  [matous]

* Make sure the form fields in the reply form are always placed under the field 
  labels. 
  [timo]
  
* Fix CSS overflow bug that occurs with the new Plone 4.0b5 comment styles.
  [timo]
  
* Unnecessary imports and variables removed.
  [timo]
  
* Added norwegian translation.
  [ggozad]

* Protect against missing canonical in conversationCanonicalAdapterFactory.
  [hannosch]

* Documentation for Captcha plugin architecture and email notification added.
  See http://packages.python.org/plone.app.discussion.
  [timo]
  